# flight-search-api

./: .dockerignore  .gitignore  Dockerfile  README.md  chunk.json  docker-compose.yml  improvments.md  pyproject.toml
av_parser/: api_service.py  models.py  readme.md
src/fly_search/: __init__.py  __main__.py  app.py  config.py  logging_config.py
src/fly_search/api/: __init__.py  dependencies.py  routes.py
src/fly_search/domain/: __init__.py
src/fly_search/domain/ports/: avia_api.py
src/fly_search/domain/services/: background_task.py  converter.py  flight_search.py
src/fly_search/infrastructure/: avia_api_adapter.py  background_task_manager.py  cache_service.py
tests/: conftest.py
tests/api/: test_background_tasks.py  test_get_flights.py  test_get_flights_cache.py
tests/domain/: test_converter.py  test_flight_search_service.py
tests/infrastructure/: test_cache_service.py
