[tool.poetry]
name = "fly-search"
version = "0.1.0"
description = ""
authors = ["AndreVld <iandre.vld@gmail.com>"]
readme = "README.md"
packages = [{ include = "fly_search", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
httpx = "^0.27.2"
pydantic-settings = "^2.12.0"
cachetools = "^6.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.14.0"
ruff = "^0.6.9"

[tool.poetry.scripts]
dev-server = "fly_search.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "ASYNC",
    "B",
    "UP",
]
ignore = [
    "B008",  # allow function-call defaults (common in FastAPI Depends)
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"av_parser/*" = ["ALL"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
